peac_dev/force-app/main/default/objects/Marlin_Configuration__c/Marlin_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Marlin Configuration</label>
</CustomObject>