peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Apex_Validations_Active__c.field-meta.xml
<CustomField>
    <fullName>Apex_Validations_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true apex validation rules will run</description>
    <inlineHelpText>If true apex validation rules will run</inlineHelpText>
    <label>Apex Validations Active</label>
    <type>Checkbox</type>
</CustomField>