peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Base_URL_Personalized_UDA_Link__c.field-meta.xml
<CustomField>
    <fullName>Base_URL_Personalized_UDA_Link__c</fullName>
    <description>Base URL for Contact field &quot;Personalized UDA Link&quot; (Application_Link__c)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Base URL for Contact field &quot;Personalized UDA Link&quot; (Application_Link__c)</inlineHelpText>
    <label>Base URL Personalized UDA Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>