peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Beneficial_Owner_Home_Address_Required__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Home_Address_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Other Address fields on Contact are required when a contact is added as a Beneficial Owner. If not checked, it will pull in the Other Address if filled in, otherwise it will pull in the Mailing Address.</description>
    <inlineHelpText>If checked, the Other Address fields on Contact are required when a contact is added as a Beneficial Owner. If not checked, it will pull in the Other Address if filled in, otherwise it will pull in the Mailing Address.</inlineHelpText>
    <label>Beneficial Owner Home Address Required</label>
    <type>Checkbox</type>
</CustomField>