peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Disable_Standard_Asset_Generation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Standard_Asset_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is checked, a standard asset is not created for each custom asset object. The standard assets are being created for the CSC UCC Filing Integration</description>
    <inlineHelpText>When this checkbox is checked, a standard asset is not created for each custom asset object. The standard assets are being created for the CSC UCC Filing Integration</inlineHelpText>
    <label>Disable Standard Asset Generation</label>
    <type>Checkbox</type>
</CustomField>