peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/DNS_Marketo_Timer__c.field-meta.xml
<CustomField>
    <fullName>DNS_Marketo_Timer__c</fullName>
    <description>If an application is rejected for more than this number of days, set related Contacts on the Parent Account to Not Sync to Marketo.</description>
    <inlineHelpText>If an application is rejected for more than this number of days, set related Contacts on the Parent Account to Not Sync to Marketo.</inlineHelpText>
    <label>DNS Marketo Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>