peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Enable_Auto_Move_to_Booking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Move_to_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, deal will automatically move to booking once all payments move to Payment Confirmed status. If not checked, a user needs to move to Booking.</description>
    <inlineHelpText>If checked, deal will automatically move to booking once all payments move to Payment Confirmed status. If not checked, a user needs to move to Booking.</inlineHelpText>
    <label>Enable Auto Move to Booking</label>
    <type>Checkbox</type>
</CustomField>