peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Enable_GDS_Score_from_Quick_App__c.field-meta.xml
<CustomField>
    <fullName>Enable_GDS_Score_from_Quick_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable GDS Score from Quick App</label>
    <type>Checkbox</type>
</CustomField>