peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/IDC_Operating__c.field-meta.xml
<CustomField>
    <fullName>IDC_Operating__c</fullName>
    <description>IDC Operating  (type IDC, finance company MBB
https://marlinbusiness.atlassian.net/browse/AS-12</description>
    <inlineHelpText>Aspire IDC Operating</inlineHelpText>
    <label>IDC Operating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>