peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/IDC_Salary__c.field-meta.xml
<CustomField>
    <fullName>IDC_Salary__c</fullName>
    <description>IDC Salary (type IDC, finance company MBB)  = $161
https://marlinbusiness.atlassian.net/browse/AS-12</description>
    <inlineHelpText>IDC Salary</inlineHelpText>
    <label>IDC Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>