peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Loan_Salary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Salary_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Loan Salary Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>