peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Req_Dealer_Pri_Contact_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Dealer_Pri_Contact_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Req Dealer Pri Contact Start Date</label>
    <type>Date</type>
</CustomField>