peac_dev/force-app/main/default/objects/Marlin_Configuration__c/fields/Static_Standard_Asset_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Static_Standard_Asset_Account_Id__c</fullName>
    <description>Standard Assets require an Account, this field specifies the account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Standard Assets require an Account, this field specifies the account</inlineHelpText>
    <label>Static Standard Asset Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>